--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,6 +26,7 @@ apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 31
+    namespace "com.shaz.plugin.fist.flutter_internet_speed_test"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
